# whitebox

./: .gitignore  CMakeLists.txt  pyproject.toml  tokenizer.json
py/: app.py  test_simple_tokenizer.py
src/: app.py  tokenizer.cpp
